@@ -1,3 +1,8 @@
+2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>
+
+	* S3/Exceptions.py, S3/S3.py: Some HTTP_400 exceptions 
+	  are retriable.
+
 2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* s3cmd, S3/ACL.py: Print all ACLs for a Grantee
